# oskey-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  Kconfig  README.md  README_zh.md  build.rs  build.ts  prj.conf  rust.patch  sysbuild.conf  zephyr.patch
.github/workflows/: build.yml
boards/: esp32.overlay  esp32_32e_2.8_led_display_ili9341.overlay  esp32_32e_2.8_led_display_st7789.overlay  esp32c3_core.overlay  esp32c3_devkitm.conf  esp32c3_devkitm.overlay  esp32c3_luatos_core_esp32c3_usb.conf  esp32s3_devkitm_procpu.conf  esp32s3_devkitm_procpu.overlay  esp32s3_lichuang.conf  esp32s3_lichuang.overlay  esp32s3_oskey_elf.overlay  esp32s3_oskey_evb.overlay  esp32s3_waveshare_3.5.overlay  esp32s3_waveshare_touch_lcd.conf  esp32s3_waveshare_touch_lcd.overlay  lichuang_esp32s3.conf  lichuang_esp32s3.overlay  native_sim_native_64.conf  native_sim_native_64.overlay  nrf52840_mdk.conf  overlay_bt_not_display.conf  overlay_debug.conf  rpi_pico.conf  rpi_pico.overlay  stm32h747i_disco_stm32h747xx_m7.overlay
boards/conf/: enable_bt.conf  enable_debug.conf  enable_dev.conf  enable_esp32_spi_ram.conf  enable_log.conf  enable_lvgl.conf  enable_lvgl_benchmark.conf  enable_mcuboot.conf  enable_mpu.conf  enable_mqtt.conf  enable_storage.conf  enable_usb.conf  enable_wifi.conf  enable_wifi_ap.conf  enable_wifi_sta.conf
boards/overlay/: cdc_acm.overlay  esp32_usb_jtag_serial.overlay
crypto/: CMakeLists.txt  bip32.c  bip32.h  bip39.c  bip39.h  bip39_english.c  bip44.c  hmac.c  hmac.h  memzero.c  pbkdf2.c  pbkdf2.h  rand.c  rand.h  sha2.c  sha2.h  test.h
crypto/codec/: base58.c
doc/board/: README.md  README_zh.md
doc/others/: temp.txt
doc/start/: Compile.md  Compile_zh.md  README.md  README_zh.md
patch/: rust.patch
protocol/: Cargo.toml
protocol/src/: lib.rs
socs/: esp32_procpu.conf
src/: app.c  app.h  bindings.h  bluetooth.c  bluetooth.h  boot.c  boot.h  gpio.c  gpio.h  lib.rs  main.c  mqtt.c  mqtt.h  storage.c  storage.h  uart.c  uart.h  wifi.c  wifi.h  wrapper.h
src/audio/: i2s.c
src/display/: logo.h  lvgl.c  lvgl.h  screen.c  screen.h
src/net/: mqtt.c  mqtt.h  wifi.c
src/port/: uart.c  uart.h
src/rs/: bus.rs  mod.rs  storage.rs  test.rs  wallet.rs  warpper.rs
src/rs/chain/: eth.rs
src/storage/: storage.c  storage.h
src/usb/: bulk.c  init.c  init.h  msosv2.h  webusb.c  webusb.h
sysbuild/: mcuboot.conf
temp/: CMakeLists.txt  test.c
