[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = ""
license = ""

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = "^0.1.0"
bytes = { version = "1.10", default-features = false, features = [
  "extra-platforms",
] }
anyhow = { version = "1.0", default-features = false }
heapless = { version = "0.8", default-features = false }
oskey-action = { path = "./lib/core/action", default-features = false, features = [
  "crypto-psa",
] }
oskey-bus = { path = "./lib/core/bus" }
portable-atomic = { version = "1.3", default-features = false, features = [
  "require-cas",
] }

[build-dependencies]
zephyr-build = "^0.1.0"
cbindgen = "0.29.0"

[profile.release]
codegen-units = 1
strip = true
opt-level = 'z'
lto = "fat"
panic = 'abort'

[profile.dev]
panic = "abort"
