[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = ""
license = ""

[lib]
crate-type = ["staticlib"]

[patch.crates-io]
alloy-trie = { git = "https://github.com/vincent-forks/trie", branch = "main" }
alloy-consensus = { git = "https://github.com/vincent-forks/alloy", branch = "v1.0.30", package = "alloy-consensus" }

[dependencies]
zephyr = "^0.1.0"
anyhow = { version = "1.0", default-features = false }
oskey-action = { path = "./lib/core/action", default-features = false, features = [
  "crypto-psa",
] }
oskey-bus = { path = "./lib/core/bus" }
oskey-chain = { path = "./lib/core/chain" }
portable-atomic = { version = "1.3", features = ["critical-section"] }
once_cell = { version = "1.0", default-features = false, features = [
  'portable-atomic',
] }
bytes = { version = "1.10", default-features = false, features = [
  "extra-platforms",
] }
const-hex = { version = "1.16", default-features = false, features = [
  "alloc",
  "force-generic",
] }
sha2 = { version = "0.10", default-features = false, features = [
  "force-soft-compact",
] }

[build-dependencies]
# zephyr-build = "^0.1.0"
cbindgen = "0.29.0"


[profile.release]
codegen-units = 1
strip = true
opt-level = 'z'
lto = "fat"
panic = 'abort'

[profile.dev]
opt-level = 1